my-portfolio/src/components/styling/contact.css
.contactpage {
  padding: 20px 0 300px 0;
}

.contactpage img {
  height: auto;
  width: 50px;
  padding: 10px;
}

.contactpage .sectionBody {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 50px;
}

.contactOptions {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.emailOption, .calendlyOption {
  padding: 20px;
  border-radius: 20px;
  background-color: rgba(70, 130, 180, 0.4);
}

.contactLabel {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 15px;
  gap: 5px;
}

.contactLink {
  color: var(--night-txt-color);
  text-decoration: none;
}
.contactLink:hover {
  text-decoration: underline;
}

/* Contact Form Styling */
.contactForm {
  max-width: 650px;
  margin: 0;
  padding: 20px;

  border-radius: 20px;
  background-color: rgba(126, 160, 189, 0.7);
}

.contactForm h2 {
  color: var(--night-txt-color);
  text-align: center;
  margin-bottom: 20px;
}

.contactForm input, .contactForm textarea {
  width: 90%;
  padding: 10px;
  margin: 10px 0;
  border: 2px solid lightsteelblue;
  border-radius: 5px;
  font-size: 16px;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif  ;
}

.contactForm button {
  background-color: var(--night-txt-color);
  color: var(--night-bg-color);
  padding: 10px 20px;
  margin-top: 10px;

  border: none;
  border-radius: 5px;
  cursor: pointer;

  font-size: 16px;
}

